Changes since version 3.0.0
---------------------------

- Changed the ObjectPrx.equals() method to eliminate the possibility
  of a ClassCastException.

- Fixed a bug in endpoint comparisons that would cause new connections
  to be created needlessly. This would occur when the representation
  of the host differed between the proxy and endpoint configuration,
  with one containing the hostname and the other the numeric host
  address.

- Fixed a bug in the Slice parser that caused problems if an included
  file contained white space in the file name.

- Fixed bug where ObjectAdapter.createProxy() didn't create indirect
  proxies with the object adapter replica group id.

Changes since version 2.1.2
---------------------------

- Added support for custom comparison in Freeze Maps. You can now
  provide your own Comparator object for keys and indices. The
  constructor for a generated Freeze Map takes two new optional
  parameters: a Comparator object (the comparator for the primary key)
  and a java.util.Map string-to-Comparator, which provides the 
  Comparators for the indices. When the comparator is null or not
  provided, Freeze compares binary strings encoded using the Ice 
  encoding.

  Freeze Map now implements the java.util.SortedMap interface, and
  also provides four new non-standard methods:

   - SortedMap headMapForIndex(String indexName, Object toKey)
   - SortedMap mapForIndex(String indexName)
   - SortedMap subMapForIndex(String indexName, Object fromKey,
			      Object toKey)
   - SortedMap tailMapForIndex(String indexName, Object fromKey)
  
  The returned SortedMap is a map index-key to java.util.Set of 
  Map.Entry objects of the main Freeze Map.

  The following code is similar but not identical to using
  map.findByFoo(bar):

  ((java.util.Set)map.subMapForIndex("foo").get(bar)).entrySet().iterator()

  In particular:

  * the parameter ("bar") must be an Object (not a byte or int for
    example)
